# canary-islands-professors-designations

./: .gitignore  README.md  lambda_handler.py  pyproject.toml
canary_islands_professors_designations/: run.py
tests/: test_run.py
